# uswds-django-template

./: .achecker.yml  .dockerignore  .gitignore  .prettierignore  AGENTS.md  DOCKER-SETUP.md  Dockerfile  Justfile  Makefile  README.md  build.ts  docker-compose.yml  docker-manage.sh  eslint.config.ts  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sample.env  sample.env.toml  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile.dev  devcontainer.json
.logs/: django.jsonl
browser/: main.ts  utils.ts
components/: __init__.py
components/accordion/: accordion.css  accordion.html  accordion.py
components/alert/: alert.css  alert.html  alert.py
components/banner/: banner.css  banner.html  banner.js  banner.py
components/button/: button.css  button.html  button.py
components/card/: card.css  card.html  card.py
database/setup/: entrypoint.sh  init-database.sql
infra/: apache-config.conf  dev.Dockerfile  prod.Dockerfile
public/assets/: README.md
public/assets/icons/: README.md
public/css/: styles.css  styles.css.map
public/icons/: README.md
public/js/: bundle.js  bundle.js.map
scripts/: clean.py  run_tmux_env.sh  uswds_init.sh
server/core/: views.py
server/core/management/commands/: create_superuser_if_none_exists.py
server/django_project/: logger.py  settings.py  urls.py
styles/: styles.scss
styles/abstracts/: _index.scss
styles/base/: _index.scss
styles/components/: _index.scss
styles/layouts/: _index.scss
styles/utilities/: _index.scss
styles/vendors/uswds/: _uswds-theme.scss
templates/: component_demo.html  index.html  layout.html
