[project]
name = "uswds-django-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "celery>=5.5.3",
    "django==5.2.1",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-ninja>=1.4.5",
    "django-redis==5.4.0",
    "mssql-django>=1.6",
    "redis==5.2.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2 ; sys_platform == 'win32'",
]
