[project]
name = "uswds-django-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.8.1",
    "celery>=5.5.3",
    "django==5.2.1",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-ninja>=1.4.5",
    "django-redis==5.4.0",
    "mssql-django>=1.6",
    "redis==5.2.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
]

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100
indent-width = 4
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "node_modules",
    "public",
    "staticfiles",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), isort (`I`), and Django (`DJ`)
select = ["E", "F", "I", "DJ", "UP", "W", "N", "B", "A", "C4", "DTZ", "T10", "ISC", "PIE", "Q"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "DJ001", # Avoid using null=True on string-based fields
]

# Allow fix for all enabled rules (when `--fix` is provided).
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
"settings.py" = ["E501"]  # Line too long
"**/tests/**/*.py" = ["B"]  # Allow assert in tests

[tool.ruff.format]
# Use single quotes for strings.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Configure import sorting (Ruff's built-in isort implementation)
known-first-party = ["django_project"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]
